Initial port to 1.17